# play-dagster

./: .gitignore  README.md  complex_pipeline.py  composite_solids.py  composite_solids.yaml  config.py  custom_type_input.yaml  custom_types.py  custom_types_3.py  custom_types_4.py  custom_types_bad_5.py  custom_types_test.py  inputs.py  intermediates.yaml  materializations.py  multiple_outputs.py  multiple_outputs.yaml  output_materialization.py  presets_csv.yaml  pyproject.toml  repository.yaml  resources.py  resources.yaml  reusable_solids.yaml  scheduler.py  serialization_strategy.py
intro_tutorial/: README.md  custom_types_2.py  custom_types_3.py  custom_types_5.py  custom_types_test.py  dagster.yaml  hello_cereal.py  modes.py  output_materialization.yaml  presets.py  presets_dev_warehouse.yaml  repos.py  reusable_solids.py  serial_pipeline.py  test_inputs.py
intro_tutorial/data/: manufacturers.csv
